<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_extra_small_padding"
    tools:context=".ui.product_detail.ProductDetailsFragment">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager2" />

    <TextView
        android:id="@+id/textViewNameDetails"
        style="@style/ProductText.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/double_extra_small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrandDetails" />

    <TextView
        android:id="@+id/textViewDescriptionDetails"
        style="@style/ProductText.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/double_extra_small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/double_extra_small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDetails" />

    <TextView
        android:id="@+id/textViewBrandDetails"
        style="@style/ProductText.XXLarge.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        app:layout_constraintBottom_toTopOf="@+id/textViewNameDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_fav_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/double_extra_small_margin"
        app:cardCornerRadius="@dimen/item_product_fav_icon_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageButtonFavDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="@color/app_background_color"
            android:contentDescription="@string/icon_favorite"
            android:padding="@dimen/small_padding"
            app:srcCompat="@drawable/ic_favorite_outlined" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_cart_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/double_extra_small_margin"
        app:cardCornerRadius="@dimen/item_product_fav_icon_radius"
        app:layout_constraintEnd_toEndOf="@+id/viewPager2"
        app:layout_constraintTop_toBottomOf="@+id/card_view_fav_details">

        <ImageView
            android:id="@+id/imageButtonCartDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="@color/app_background_color"
            android:contentDescription="@string/icon_favorite"
            android:padding="@dimen/small_padding"
            app:srcCompat="@drawable/ic_cart" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewCategoryDetails"
        style="@style/ProductText.XLarge.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginEnd="@dimen/extra_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionDetails" />

    <TextView
        android:id="@+id/textViewPriceDetails"
        style="@style/ProductText.XXLarge.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/buttonAddToCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatusDetails" />

    <TextView
        android:id="@+id/textViewStatusDetails"
        style="@style/ProductText.XXLarge.Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginEnd="@dimen/extra_small_margin"
        android:text="@string/high_rated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ProgressBar
        android:id="@+id/progressBarProductDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewErrorProductDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="Go to fav"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddToCart" />
</androidx.constraintlayout.widget.ConstraintLayout>
